--- a/Masterarbeit 4/Tex/chapter2.tex
+++ b/Masterarbeit 4/Tex/chapter2.tex
@@ -1,6 +1,6 @@
 \chapter{Prozessmodelle}\label{sec:chapter2}
 
-In Kapitel 2 werden grundlegende Konzepte des Software Engineering vorgestellt, welche notwendig sind, um den Inhalt dieser Arbeit besser zu verstehen. Zunächst wird in Kapitel 2.1 der Begriff Software Engineering definiert und die Ziele, der Prozess und die Prinzipien des Software Engineering werden erläutert. Weiterhin wird in Kapitel 2.2 der Begriff Softwareprozessmodell erklärt. Hierbei werden Software-Projekttypen sowie schwergewichtige und leichtgewichtige Prozessmodelle beschrieben. Anschließend gibt es eine Einführung in die drei Softwareprozessmodelle Scrum, Open Unified Process und V-Modell-XT.
+In Kapitel 2 werden grundlegende Konzepte des Software Engineering vorgestellt, welche notwendig sind, um den Inhalt dieser Arbeit besser zu verstehen. Zunächst wird in Kapitel 2.1 der Begriff Software Engineering definiert und die Ziele, der Prozess und die Prinzipien des Software Engineering werden erläutert. Weiterhin wird in Kapitel 2.2 der Begriff Softwareprozessmodell erklärt. Hierbei werden Software- Projekttypen sowie schwergewichtige und leichtgewichtige Prozessmodelle beschrieben. Anschließend gibt es eine Einführung in die drei Softwareprozessmodelle Scrum, Open Unified Process und V-Modell-XT.
 
 \section{Software Engineering}\label{sec:chapter2: Software Engineering}
 Heutzutage werden immer mehr Systeme von Software kontrolliert. Dies macht Software Engineering zu einer der bedeutendsten Technologien \cite{Puntambekar2007}.
@@ -15,11 +15,11 @@ Software Engineering besteht aus mehreren Schichten (Abbildung \ref{fig:Schichte
 \end{center}
 \end{figure}
 
-Somit sind für Software Engineering ein diszipliniertes Qualitätsmanagement sowie eine Prozessschicht vorhanden, um die termingerechte Ablieferung von Software zu gewährleisten. In der Methoden-Schicht wird sodann die Implementierung unter Zuhilfenahme von Requirementanalysen, Design und Programmierung durchgeführt. Hierbei werden Werkzeuge zur Automatisierung in SoftwareDokumenteprozessen benutzt \cite{Puntambekar2007}. 
+Somit sind für Software Engineering ein diszipliniertes Qualitätsmanagement sowie eine Prozessschicht vorhanden, um die termingerechte Ablieferung von Software zu gewährleisten. In der Methoden-Schicht wird sodann die Implementierung unter Zuhilfenahme von Anforderungsanalysen, Design und Programmierung durchgeführt. Hierbei werden Werkzeuge zur Automatisierung in Software- Dokumentenprozessen benutzt \cite{Puntambekar2007}. 
 
 \subsection{Ziele, Prozess und Prinzipien des Software Engineering}
 
-Das Hauptziel in der Software Entwicklung ist, dass die Lösungen mit den Anforderungen übereinstimmen. Vollständige und konsistente Anforderungserhebungen sind, insbesondere für große Systeme, selten. Sowohl die Nutzer, als auch die Entwickler haben ein oftmals unvollständiges Verständnis des eigentlichen Problems und erheben somit ihre Anforderungen erst während der Entwicklung. Somit muss man mit Änderungen der Anforderungen an ein System während dessen Entwicklung rechnen. Aus diesem Grund ist es wichtig, Ziele beim Software Engineering zu haben, um die Auswirkungen solcher Änderungen einzudämmen \cite{Booch1993}.
+Das Hauptziel in der Software Entwicklung ist, dass die Lösungen mit den Anforderungen übereinstimmen. Vollständige und konsistente Anforderungserhebungen sind, insbesondere für große Systeme, selten. Sowohl die Nutzer, als auch die Entwickler haben ein oftmals unvollständiges Verständnis des eigentlichen Problems und erheben ihre Anforderungen erst während der Entwicklung. Somit muss man mit Änderungen der Anforderungen an ein System während dessen Entwicklung rechnen. Aus diesem Grund ist es wichtig, Ziele beim Software Engineering zu haben, um die Auswirkungen solcher Änderungen einzudämmen \cite{Booch1993}.
 Abbildung  \ref{fig:Wuerfel} zeigt die von \cite{ross1975software} definierten Ziele, Prinzipien und den Prozess des Software Engineering, welche nachfolgend genauer erläutert werden: 
 
 \begin{figure}[htp]
@@ -33,11 +33,11 @@ Abbildung  \ref{fig:Wuerfel} zeigt die von \cite{ross1975software} definierten Z
 \subsubsection{Prinzipien des Software Engineering}
 
 
- Das \textit{Modluarisierungsprinzip} gibt eine geeignete Strukturierung für Softwaresysteme an. Das \textit{Abstraktionsprinzip} soll dabei helfen, sich von unwichtigen Details, welche für die zu entwickelnde Lösung irrelevant sind, zu lösen. Das \textit{Geheimnisprinzip} bezieht sich auf das Definieren und Durchsetzen von Zugriffsbeschränkungen. Das \textit{Lokalitätsprinzip} verlangt das räumlich zusammenhängende Ablegen von zusammengehörenden Informationen. Konsistenz wird durch das \textit{Gleichförmigkeitsprinzip} gewährleistet. Durch das \textit{Vollständigkeitsprinzip} wird sichergestellt, dass nichts vergessen wurde. Das Prinzip der \textit{Nachvollziehbarkeit} stellt sicher, dass Informationen, welche zur Überprüfung der Korrektheit benötigt werden, detailliert dargelegt werden \cite{ross1975software}.
+ Das \textit{Modularisierungsprinzip} gibt eine geeignete Strukturierung für Softwaresysteme an. Das \textit{Abstraktionsprinzip} soll dabei helfen, sich von unwichtigen Details, welche für die zu entwickelnde Lösung irrelevant sind, zu lösen. Das \textit{Lokalitätsprinzip} verlangt das räumlich zusammenhängende Ablegen von zusammengehörenden Informationen. Das \textit{Geheimnisprinzip} bezieht sich auf das Definieren und Durchsetzen von Zugriffsbeschränkungen. Konsistenz wird durch das \textit{Gleichförmigkeitsprinzip} gewährleistet. Durch das \textit{Vollständigkeitsprinzip} wird sichergestellt, dass nichts vergessen wurde. Das Prinzip der \textit{Nachvollziehbarkeit} stellt sicher, dass Informationen, welche zur Überprüfung der Korrektheit benötigt werden, detailliert dargelegt werden \cite{ross1975software}.
  
  \subsubsection{Prozess des Software Engineering}
 
-Wie Abbildung  \ref{fig:Wuerfel} entnommen werden kann, besteht der Prozess des Software Engineering aus 5 Schritten: Im ersten Schritt \textit{Zielsetzung} werden die Anforderungen an ein System festgelegt. Anschließend erfolgt im Schritt \textit{Konzept} die Ableitung der Software-Architektur, um die zuvor erhobenen Anforderungen zu erfüllen. Des Weiteren werden die Komponenten des Software-Systems festgelegt. Im dritten Schritt \textit {Mechanismus} erfolgt sodann die Implementierung des Software-Systems. Im darauffolgenden Schritt \textit{Notation} wird die Kommandosprache definiert, die ein Benutzer verwendet, um die Funktionalitäten des Software-Systems aufzurufen. Im letzten Schritt \textit{Gebrauch} muss noch die Bedienung des Systems, z.B. in Form eines Benutzerhandbuches, beschrieben werden \cite{ross1975software}.
+Wie Abbildung  \ref{fig:Wuerfel} entnommen werden kann, besteht der Prozess des Software Engineering aus 5 Schritten: Im ersten Schritt \textit{Zielsetzung} werden die Anforderungen an ein System erhoben. Anschließend erfolgt im Schritt \textit{Konzept} die Ableitung der Software-Architektur, um die zuvor erhobenen Anforderungen zu erfüllen. Des Weiteren werden die Komponenten des Software-Systems festgelegt. Im dritten Schritt \textit {Mechanismus} erfolgt sodann die Implementierung des Software-Systems. Im darauffolgenden Schritt \textit{Notation} wird die Kommandosprache definiert, die ein Benutzer verwendet, um die Funktionalitäten des Software-Systems aufzurufen. Im letzten Schritt \textit{Gebrauch} muss noch die Bedienung des Systems, z.B. in Form eines Benutzerhandbuches, beschrieben werden \cite{ross1975software}.
 
   \subsubsection{Ziele des Software Engineering}
 
@@ -49,9 +49,9 @@ Für das Verständnis, die Schaffung oder Unternehmung von etwas Großem, fertig
 Hierbei stützten sie sich auf Modelle, welche als Stellvertreter für die Sache, die verstanden, geschaffen, unternommen oder betrieben werden soll, angesehen werden kann \cite{Hesse2008}. \newline
 Insbesondere die heutzutage von Softwareentwicklern zu erstellenden Softwareprodukte zeichnen sich durch ein hohes Maß an Komplexität und Umfang aus. Neben den Erwartungen von Kunden hinsichtlich Qualität müssen Softwaresysteme ebenfalls termingerecht und innerhalb eines vorgegebenen Budgetrahmens erstellt werden. Effektive und effiziente Softwareprozessmodelle gewinnen somit immer mehr Bedeutung \cite{Grechenig2010}.
 Modell leitet sich von dem lateinischen Begriff  \glqq modelus \grqq
-ab und kann mit  \glqq Regel, Form, Muster, Vorbild \grqq übersetzt werden \cite{Hesse2008}. 
-Der Begriff Prozess stammt von dem lateinischen Wort "processus" ' ab und lässt sich mit "Fortgang oder Verlauf" ' übersetzen \cite{koch2011, Staud2006}. \newline 
-Ein Softwareprozess stellt eine Abfolge von Schritten dar, welche zur Herstellung von Software notwendig sind \cite{Mishra2012, Stoerrle2005}. Mit Hilfe eines Softwareprozessmodelles lässt sich der organisatorische Rahmen zur Herstellung von Software beschreiben \cite{Koelmel2000}. Ein Softwareprozessmodell stellt somit ein Modell für die Entwicklung eines Software-Systems dar \cite{Hanser2010}. Die einzelnen Abschnitte eines Softwareprozesses werden hierbei als Phasen bezeichnet \cite{Stoerrle2005}. Diese werden unterscheiden in (Abbildung \ref{fig:SEProzess}):
+ab und kann mit  \glqq Regel, Form, Muster, Vorbild\grqq \ übersetzt werden \cite{Hesse2008}. 
+Der Begriff Prozess stammt von dem lateinischen Wort "processus" ' ab und lässt sich mit "Fortgang oder Verlauf"' übersetzen \cite{koch2011, Staud2006}. \newline 
+Ein Softwareprozess ist eine Abfolge von Schritten, welche zur Herstellung von Software notwendig sind \cite{Mishra2012, Stoerrle2005}. Mit Hilfe eines Softwareprozessmodelles lässt sich der organisatorische Rahmen zur Herstellung von Software beschreiben \cite{Koelmel2000}. Ein Softwareprozessmodell stellt somit ein Modell für die Entwicklung eines Software-Systems dar \cite{Hanser2010}. Die einzelnen Abschnitte eines Softwareprozesses werden hierbei als Phasen bezeichnet \cite{Stoerrle2005}. Diese werden unterschieden in (Abbildung \ref{fig:SEProzess}):
 
 \begin{figure}[htp]
 \begin{center}
