--- a/Masterarbeit 4/Tex/chapter3.tex
+++ b/Masterarbeit 4/Tex/chapter3.tex
@@ -1,6 +1,6 @@
 
 \chapter{Modellierung}\label{sec:chapter3}
-Kapitel 3 liefert einen Überblick über die Grundlagen der Modellierung. Zunächst werden in Kapitel 3.1 die Grundlagen der Prozessmodellierung erläutert. Hierbei wird auf die Grundsätze ordnungsgemäßer Modellierung eingegangen. Anschließend werden in Kapitel 3.2 Prozessmodellierugssprachen eingeführt. Einerseits werden hier imperative Modellierungssprachen erklärt und es wird ein kurzer Einblick in die Prozessmodellierungssprache BPMN gegeben. Andererseits werden deklarative Prozessmodellierungssprachen vorgestellt und es erfolgt ein detaillierter Einblick in die deklarative Prozessmodellierungssprache ConDec.
+Kapitel 3 liefert einen Überblick über die Grundlagen der Modellierung. Zunächst werden in Kapitel 3.1 die Grundlagen der Prozessmodellierung erläutert. Hierbei wird auf die Grundsätze ordnungsgemäßer Modellierung eingegangen. Anschließend werden in Kapitel 3.2 Prozessmodellierugssprachen eingeführt. Einerseits werden in Kapitel 3.2.1 imperative Modellierungssprachen erklärt und es wird ein kurzer Einblick in die Prozessmodellierungssprache BPMN gegeben. Andererseits werden in Kapitel 3.2.2 deklarative Prozessmodellierungssprachen vorgestellt und es erfolgt ein Einblick in die deklarative Prozessmodellierungssprache ConDec.
 
 \section{Prozessmodellierung}\label{sec:chapter3:Prozessmodellierung}
 
@@ -40,16 +40,16 @@ Der \textit{Grundsatz der Relevanz} besagt, dass alle Elemente und Verknüpfunge
 
 Der \textit{Grundsatz der Wirtschaftlichkeit} sagt aus, dass die Modellierung kosteneffektiv durchzuführen ist \cite{leimeister2012}. Es gilt also abzuwägen, ob der Aufwand, der für die Modellierung notwendig ist, auch einen entsprechenden Nutzen bringt \cite{freund2007, journals95}.\newline
 
-Durch den \textit{Grundsatz der Klarheit} soll sichergestellt werden, dass das Modell für den Adressaten verständlich ist. Es muss also bei der Modellierung auf Strukturiertheit, Verständlichkeit und Anschaulichkeit geachtet werden. Insbesondere sollte das Modell ohne besondere methodische Kenntnisse verständlich sein. Somit sollte die Modellierung entweder von links nach rechts oder von oben nach unten verlaufen, wobei darauf zu achten ist, dass sich Flusslinien und Kanten hierbei so wenig wie möglich überkreuzen. Weiterhin sollte die Anzahl der Elemente auf das Nötigste reduziert werden \cite{leimeister2012,journals95, freund2007,reinshagen2009, becker2012prozessmanagement,koch2011,bpm07,thesis_maja}.\newline
+Durch den \textit{Grundsatz der Klarheit} soll sichergestellt werden, dass das Modell für den Adressaten verständlich ist. Es muss also bei der Modellierung auf Strukturiertheit, Verständlichkeit und Anschaulichkeit geachtet werden. Insbesondere sollte das Modell ohne besondere methodische Kenntnisse verständlich sein. Somit sollte die Modellierung entweder von links nach rechts oder von oben nach unten verlaufen, wobei darauf zu achten ist, dass sich Flusslinien und Kanten hierbei so wenig wie möglich überkreuzen. Weiterhin sollte die Anzahl der Elemente auf das Nötigste reduziert werden. Vor allem die Anzahl an Verzweigungen innerhalb eines Prozessmodells wirkt sich negativ auf die Verständlichkeit von Prozessmodellen aus. Ebenso hat eine hohe Anzahl von Verbindungen zwischen Aktivitäten einen negativen Einfluß auf das Verständnis \cite{leimeister2012,journals95, freund2007,reinshagen2009, becker2012prozessmanagement,koch2011,bpm07,thesis_maja}.\newline
 
-Wird in unterschiedlichen Modellen der gleiche Sachverhalt abgebildet, so sollten letztendlich auch vergleichbare Modelle entstehen, unabhängig von der verwendeten Modellierungssprache. Dies besagt der \textit{Grundsatz der Vergleichbarkeit}. Insbesondere ist auf einen einheitlichen Abstraktionsgrad der Prozessmodelle zu achten. \cite{leimeister2012, journals95, freund2007,reinshagen2009}.\newline
+Wird in unterschiedlichen Modellen der gleiche Sachverhalt abgebildet, so sollten letztendlich auch vergleichbare Modelle entstehen, unabhängig von der verwendeten Modellierungssprache. Dies besagt der \textit{Grundsatz der Vergleichbarkeit}. Insbesondere ist auf einen einheitlichen Abstraktionsgrad der Prozessmodelle zu achten \cite{leimeister2012, journals95, freund2007,reinshagen2009}.\newline
 
 
 \section{Prozessmodellierungssprachen}\label{sec:chapter3:Prozessmodellierungssprachen}
 
 Die Modellierung eines Prozesses mit natürlicher Sprache bringt einige Nachteile mit sich, wie z.B. fehlende Eindeutigkeit, schwer zu überprüfende Vollständigkeit und teilweise Widersprüche. Mögliche Folgen davon können unterschiedliche Interpretationen, Missverständnisse und falsche Schlussfolgerungen sein. Eine reine Beschreibung der Prozessmodelle mit mathematischen Modellen und Formalismen führt oftmals zu einer Verminderung der intuitiven Verständlichkeit der Prozessmodelle. Aus diesem Grund ist es sinnvoll den Prozess graphisch als Diagramm mit einer Prozessmodellierungssprache darzustellen, da diese eine Schnittstelle zwischen formaler Exaktheit und intuitiver Verständlichkeit darstellen \cite{thomas2009,kircher2006}.  \newline
 Hierfür existierten eine Reihe verschiedener Prozessmodellierungssprachen, deren Vor- und Nachteile stark diskutiert werden. Der derzeit am meisten diskutierte Unterschied ist der zwischen imperativen und deklarativen Prozessmodellierungssprachen \cite{fahland2009}. \newline
-Die ursprüngliche Unterscheidung zwischen imperativen und deklarativen Sprachen stammt aus der Programmierung. Während imperative Programmierung angibt, "Wie etwas zu tun ist", folgt deklarative Programmierung dem Ansatz \grqq sag was benötigt wird und lass das System herausfinden, wie es erreicht werden kann\grqq \cite{pichler2012}.
+Die ursprüngliche Unterscheidung zwischen imperativen und deklarativen Sprachen stammt aus der Programmierung. Während imperative Programmierung angibt, "Wie etwas zu tun ist", folgt deklarative Programmierung dem Ansatz \grqq sag was benötigt wird und lass das System herausfinden, wie es erreicht werden kann\grqq \ \cite{pichler2012}.
 
 \subsection{Imperative Modellierung}
 Imperative Programmierung wird als zustandsbehaftete Programmierung bezeichnet, da das  Ergebnis einer Komponente nicht nur von ihren Argumenten abhängt, sondern auch von internen Parametern, was auch als ihr \grqq Zustand\grqq \  bezeichnet wird \cite{fahland2009}.  \newline
@@ -58,7 +58,7 @@ Imperative Programmierung wird als zustandsbehaftete Programmierung bezeichnet, 
 \subsubsection {BPMN}
 
 Die \textit{Business Process Modelling Notation (BPMN)} wurde von der \textit{Business Process Management Initiative} entwickelt und 2004 veröffentlicht. Seit 2005 wird sie von der \textit{Object Management Group} standardisiert und weiterentwickelt \cite{krallmann2013}.
-Die BPMN-Elemente lassen sich anhand der fünf Kategorien \textit{Flussobjekte}, \textit{verbindende Objekte}, \textit{Daten}, \textit{Artefakte} und \textit{Swimlanes} einteilen. Abbildung \ref{fig:BPMN} zeigt die Einteilung und die wichtigsten Prozess-Elemente von BPMN, welche nachfolgend genauer erläutert werden \cite{gpfert2012}. \newline
+Die BPMN-Elemente lassen sich anhand der fünf Kategorien \textit{Swimlanes}, \textit{Flussobjekte}, \textit{verbindende Objekte}, \textit{Daten} und \textit{Artefakte} einteilen. Abbildung \ref{fig:BPMN} zeigt die Einteilung und die wichtigsten Prozess-Elemente von BPMN, welche nachfolgend genauer erläutert werden \cite{gpfert2012}. \newline
 
 \begin{figure}[htp]
 \begin{center}
@@ -68,8 +68,8 @@ Die BPMN-Elemente lassen sich anhand der fünf Kategorien \textit{Flussobjekte},
 \end{center}
 \end{figure}
 
-In der Kategorie \textbf{Swimlanes} befinden sich \textit{Pools} und \textit{Lanes}. \textit{Pools} stellen eine Art Container für den Prozess dar. Ein \textit{Pool} stellt einen Prozessteilnehmer dar. Ein Prozessteilnehmer ist z.B. eine Organisationseinheit oder eine selbstständige Geschäftseinheit. Werden in einem Prozessmodell mehrere \textit{Pools} verwendet, so können hiermit Kollaborationen zwischen verschiedenen Prozessteilnehmern dargestellt werden. Ein \textit{Pool} kann in mehrere \textit{Lanes} unterteilt werden. \textit{Lanes} können untergeordnete Organisationseinheiten, Partnerrollen (z.B. Vertrieb, Projektleitung, Marketing), oder auch verschiedene Bestandteile eines Systems sein \cite{gpfert2012, pitschke2010, allweyer2013}. \newline
-\textit{Aktivitäten}, \textit{Ereignisse} und \textit{Gateways} befinden sich in der Kategorie \textbf{Flussobjekte}.
+In der Kategorie \textbf{Swimlanes} befinden sich \textit{Pools} und \textit{Lanes}. \textit{Pools} stellen eine Art Container für den Prozess dar. Ein \textit{Pool} ist ein Prozessteilnehmer dar. Ein Prozessteilnehmer ist z.B. eine Organisationseinheit oder eine selbstständige Geschäftseinheit. Werden in einem Prozessmodell mehrere \textit{Pools} verwendet, so können hiermit Kollaborationen zwischen verschiedenen Prozessteilnehmern dargestellt werden. Ein \textit{Pool} kann in mehrere \textit{Lanes} unterteilt werden. \textit{Lanes} können untergeordnete Organisationseinheiten, Partnerrollen (z.B. Vertrieb, Projektleitung, Marketing) oder auch verschiedene Bestandteile eines Systems sein \cite{gpfert2012, pitschke2010, allweyer2013}. \newline
+ \textit{Ereignisse}, \textit{Aktivitäten}und \textit{Gateways} befinden sich in der Kategorie \textbf{Flussobjekte}.
 Start und Ende von Prozessen werden in BPMN durch \textit{Ereignisse} beschrieben. Diese werden in  \textit{Startereignisse} und \textit{Endereignisse} unterschieden.  Weiterhin gibt es auch noch \textit{Zwischenereignisse}. \newline
 \textit{Aktivitäten} stellen Arbeitseinheiten und einen Oberbegriff für Aufgaben, Unterprozesse und Aufruf-Aktivitäten dar. Beschriftet werden sie mit einer Objekt-Verb-Verbindung (z.B. Lieferung überprüfen) \cite{gpfert2012}. \newline
 Mit Hilfe von \textit{Gateways} lässt sich der Prozessablauf kontrollieren und steuern, da durch diese Verzweigungen und Zusammenführungen von Sequenzflüssen dargestellt werden. \cite{gpfert2012, allweyer2013}. Hierbei werden \textit{Exklusive Gateways} zur Modellierung alternativer Pfade, \textit{Parallele Gateways} zur Modellierung parallel ablaufender Pfade, \textit{Inklusive Gateways} zur Modellierung der Auswahl eines oder mehrerer Pfade und \textit{Komplexe Gateways} zur Modellierung komplexer Regeln bei Verzweigungen und Zusammenführungen, unterschieden \cite{allweyer2013}.\newline 
@@ -83,8 +83,8 @@ Mit Hilfe von \textit{Gateways} lässt sich der Prozessablauf kontrollieren und 
 \end{figure} 
 
 
-\textit{Nachrichtenfluss}, \textit{Assoziation}, \textit{Datenassoziation} und \textit{Sequenzfluss} bilden zusammen die Kategorie \textbf{Verbindende Objekte}. Ein \textit{Sequenzfluss} dient dazu die Reihenfolge der Aktivitäten im Prozess darzustellen. Ein \textit{Nachrichtenfluss} wird dazu verwendet, den Nachrichtenfluss zwischen zwei getrennten Prozessteilnehmern, z.B. aus zwei verschiedenen Unternehmen, darzustellen. Mit Hilfe einer \textit{Assoziation} können Daten-, Text und andere Artefakte mit Flussobjekten verknüpft werden. Hiermit werden die In- und Outputs von Aktivitäten aufgezeigt \cite{white2004}. \newline
-In der Kategorie \textbf{Daten} befinden sich \textit{Datenobjekte}, \textit{Dateninput}, \textit{Datenoutput} und \textit{Datenspeicher}. \textit{Datenobjekte} geben hierbei an, welche Daten von den Aktivitäten benötigt werden, bzw. von diesen erzeugt werden \cite{white2004}. Sie stellen somit Informationen dar, welche durch den Prozess fließen. Bei einem  \textit{Dateninput} handelt es sich um einen externen Input für den ganzen Prozess, der von einer Aktivität gelesen wird. Ein \textit{Datenoutput} hingegen wird als Ergebnis eines ganzen Prozesses erzeugt. Somit handelt es sich bei \textit{DatenInput}, bzw. \textit{Datenoutput} um Eingangs-, bzw. Ausgangsprozessschnittstellen \cite{bpmnposter}. Ein \textit{Datenspeicher} kann für den indirekten Austausch von Daten zwischen zwei verschiedenen Prozessteilnehmern verwendet werden. Hierfür ist es notwendig, dass beide Prozessteilnehmer Zugriff auf den |textit{Datenspeicher} haben \cite{allweyer2013}.\newline
+\textit{Nachrichtenfluss}, \textit{Assoziation}, \textit{Datenassoziation} und \textit{Sequenzfluss} bilden zusammen die Kategorie \textbf{Verbindende Objekte}. Ein \textit{Nachrichtenfluss} wird dazu verwendet, den Nachrichtenfluss zwischen zwei getrennten Prozessteilnehmern, z.B. aus zwei verschiedenen Unternehmen, darzustellen. Mit Hilfe einer \textit{Assoziation} können Daten-, Text und andere Artefakte mit Flussobjekten verknüpft werden. Hiermit werden die In- und Outputs von Aktivitäten aufgezeigt. Ein \textit{Sequenzfluss} dient dazu die Reihenfolge der Aktivitäten im Prozess festzulegen \cite{white2004}. \newline
+In der Kategorie \textbf{Daten} befinden sich \textit{Datenobjekte}, \textit{Dateninput}, \textit{Datenoutput} und \textit{Datenspeicher}. \textit{Datenobjekte} geben hierbei an, welche Daten von den Aktivitäten benötigt werden, bzw. von diesen erzeugt werden \cite{white2004}. Sie stellen somit Informationen dar, welche durch den Prozess fließen. Bei einem  \textit{Dateninput} handelt es sich um einen externen Input für den ganzen Prozess, der von einer Aktivität gelesen wird. Ein \textit{Datenoutput} hingegen wird als Ergebnis eines ganzen Prozesses erzeugt. Somit handelt es sich bei \textit{Dateninput}, bzw. \textit{Datenoutput} um Eingangs-, bzw. Ausgangsprozessschnittstellen \cite{bpmnposter}. Ein \textit{Datenspeicher} kann für den indirekten Austausch von Daten zwischen zwei verschiedenen Prozessteilnehmern verwendet werden. Hierfür ist es notwendig, dass beide Prozessteilnehmer Zugriff auf den \textit{Datenspeicher} haben \cite{allweyer2013}.\newline
 Die Kategorie \textbf{Artefakte} beinhaltet \textit{Gruppierung}, \textit{Anmerkung} und \textit{Assoziation}.  Diese ergänzen den Prozess um zusätzliche Informationen, haben jedoch keinerlei Einfluss auf diesen \cite{gpfert2012}. Eine \textit{Gruppierung} kann hierbei zur Dokumentation oder für Analysezwecke benutzt werden. Durch eine \textit{Anmerkungen} können dem Leser zusätzliche Informationen in Textform bereit gestellt werden \cite{white2004}. Mit Hilfe einer \textit{Assoziation} lassen sich Datenobjekte mit Aktivitäten und Prozessen verknüpfen \cite{bpmnposter}. \newline
  Eine Übersicht über alle Elemente der BPMN Notation kann Anhang A entnommen werden.\newline
 
@@ -94,12 +94,12 @@ Die Kategorie \textbf{Artefakte} beinhaltet \textit{Gruppierung}, \textit{Anmerk
 
 \subsection{Deklarative Modellierung}
 
- Die deklarative Modellierung folgt im Gegensatz zur imperativen Modellierung einem \grqq Outside-In-Ansatz\grqq  \cite{lichtenegger2012}. Deklarative Sprachen legen den Ablauf nicht im Vorhinein fest. \cite{pichler2012}. Sie sind somit sehr flexibel \cite{reichert2012}. Zu Beginn befinden sich nur die Aktivitäten im Prozessmodell und erlauben jegliches Ausführungsverhalten. Erst wenn Constraints zum Modell hinzugefügt werden, werden schrittweise Ausführungsalternativen verworfen \cite{pichler2012}. Constraints lassen sich hierbei in die beiden verschiedenen Kategorien \textbf{Ausführungsconstraints} und \textbf{Terminierungsconstraints} einteilen. Die Ausführungsconstraints geben Einschränkungen für die Ausführung von Aktivitäten an. Hierbei kann es sich z.B. um die Anzahl möglicher Ausführungen für eine Aktivität oder eine Mindestzeitverzögerung zwischen zwei Aktivitäten handeln. Terminierungsconstraints hingegen geben an, wann eine korrekte Terminierung (Beendigung) des Prozesses möglich ist. Z.B. kann hier vorgeschrieben werden, dass eine Aktivität mindestens einmal ausgeführt werden muss oder dass der Aktivität A Aktivität B folgen muss. Bevor dies nicht geschehen ist, ist kein korrektes Enden des Prozesses möglich \cite{reichert2012}.  Abbildung \ref{fig:Dec} zeigt ein Beispiel für ein deklaratives Prozessmodell. Es besteht aus den drei Aktivitäten A,B und C sowie aus zwei Constraints:  Das Constraint zwischen A und B legt fest, dass Aktivität B Aktivität A vorausgehen muss und das Constraint bei Aktivität C legt fest, dass diese mindestens einmal ausgeführt werden muss, aber beliebig oft ausgeführt werden kann. Abgesehen von diesen Bedingungen, können die Aktivitäten sowohl beliebig oft, als auch in beliebiger Reihenfolge ausgeführt werden. Z.B. wäre [A,B,C,C,A,B,C] eine korrekte Ausführungsreihenfolge. Die Ausführungsreihenfolgen [C,B,C,A] oder [A,B,A,B] wären jedoch inkorrekt, da bei der ersten Ausführungsreihenfolge B vor A ausgeführt wird und somit das Constraint zwischen diesen beiden Aktivitäten verletzt würde. Bei der zweiten Ausführungsreihenfolge wird Aktivität C nicht ausgeführt, wodurch das Constraint verletzt wird, dass diese mindestens einmal auszuführen ist \cite{reichert2012}. \newline
+ Die deklarative Modellierung folgt im Gegensatz zur imperativen Modellierung einem \grqq Outside-In-Ansatz\grqq \ \cite{lichtenegger2012}. Deklarative Sprachen legen den Ablauf nicht im Vorhinein fest \cite{pichler2012}. Sie sind somit sehr flexibel \cite{reichert2012}. Zu Beginn befinden sich nur die Aktivitäten im Prozessmodell und erlauben jegliches Ausführungsverhalten. Erst wenn Constraints zum Modell hinzugefügt werden, werden schrittweise Ausführungsalternativen verworfen \cite{pichler2012}. Constraints lassen sich hierbei in die beiden verschiedenen Kategorien \textbf{Ausführungsconstraints} und \textbf{Terminierungsconstraints} einteilen. Die Ausführungsconstraints geben Einschränkungen für die Ausführung von Aktivitäten an. Hierbei kann es sich z.B. um die Anzahl möglicher Ausführungen für eine Aktivität oder eine Mindestzeitverzögerung zwischen zwei Aktivitäten handeln. Terminierungsconstraints hingegen geben an, wann eine korrekte Terminierung (Beendigung) des Prozesses möglich ist. Z.B. kann hier vorgeschrieben werden, dass eine Aktivität mindestens einmal ausgeführt werden muss oder dass der Aktivität A Aktivität B folgen muss. Bevor dies nicht geschehen ist, ist kein korrektes Enden des Prozesses möglich \cite{reichert2012}.  Abbildung \ref{fig:Dec} zeigt ein Beispiel für ein deklaratives Prozessmodell. Es besteht aus den drei Aktivitäten A,B und C sowie aus zwei Constraints:  Das Constraint zwischen A und B legt fest, dass Aktivität B Aktivität A vorausgehen muss und das Constraint bei Aktivität C legt fest, dass diese mindestens einmal ausgeführt werden muss, aber beliebig oft ausgeführt werden kann. Abgesehen von diesen Bedingungen, können die Aktivitäten sowohl beliebig oft, als auch in beliebiger Reihenfolge ausgeführt werden. Z.B. wäre [A,B,C,C,A,B,C] eine korrekte Ausführungsreihenfolge. Die Ausführungsreihenfolgen [C,B,C,A] oder [A,B,A,B] wären jedoch inkorrekt, da bei der ersten Ausführungsreihenfolge B vor A ausgeführt wird und somit das Constraint zwischen diesen beiden Aktivitäten verletzt würde. Bei der zweiten Ausführungsreihenfolge wird Aktivität C nicht ausgeführt, wodurch das Constraint verletzt wird, dass diese mindestens einmal auszuführen ist \cite{reichert2012}. \newline
 
 \begin{figure}[H]
 \begin{center}
   \includegraphics[scale=0.6]{DecProcessModel} %pdf, jpg, png...
-  \caption{Deklarativer Beispiel-Prozess}
+  \caption{Deklarativer Beispiel-Prozess \cite{reichert2012}}
   \label{fig:Dec}
 \end{center}
 \end{figure} 
